tests/error/array_errors/comprehension_wrong_length.py
import guppylang.std.quantum as quantum
from guppylang.decorator import guppy
from guppylang.module import GuppyModule
from guppylang.std.builtins import array


module = GuppyModule("test")
module.load(quantum)


@guppy(module)
def main() -> array[int, 42]:
    return array(i for i in range(10))


module.compile()
